--- a/src/App.scss
+++ b/src/App.scss
@@ -45,27 +45,40 @@ nav {
 
   .search {
     padding: 2rem 0;
-    input[type="text"] {
-      width: 25rem;
-      font-size: 16px;
-      outline: none;
+
+    form {
+      display: flex;
+      align-items: center;
       border: 1px solid $very-light-gray;
-      padding: 1rem 2rem;
       border-radius: $radius;
       box-shadow: $shadow;
+      padding: 0 1rem;
+
+      input[type="text"] {
+        width: 25rem;
+        font-size: 16px;
+        outline: none;
+        padding: 1rem 0.4rem;
+        border: 0;
+        background-color: transparent;
+      }
+
+      .icon-left {
+        margin-right: 0.8rem;
+      }
     }
   }
 
   .filter {
     .button {
-      width: 14rem;
+      width: 12rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
       font-size: 16px;
       cursor: pointer;
       border: 1px solid $very-light-gray;
-      padding: 1rem 1.6rem;
+      padding: 1rem 2rem;
       background-color: white;
       border-radius: $radius;
       box-shadow: $shadow;
